--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@ body {
 	visibility: visible;
 }
 		</style>
-		<link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
-<link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
-<link rel='manifest' href='index.manifest.json'>
-
+		
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -138,7 +135,7 @@ body {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":true,"fileSizes":{"index.pck":64432,"index.wasm":2866393},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"index.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"executable":"index","experimentalVK":true,"fileSizes":{"index.pck":64432,"index.wasm":49219187},"focusCanvas":false,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
